--- a/includes/media.pug
+++ b/includes/media.pug
@@ -38,9 +38,9 @@ block content
             iframe(width='320', height='180', src='https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwHl9brI0ggRrnvir9q8kSmA', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
-            div.icon.web.telegram.org
+            div.icon.youtube
             a() Ще музика:  
-            a(href='https://t.me/music_hitok_ua', target='_blank') _music_HitOK_UA
+            a(href='https://www.youtube.com/@musik-hitok-ua', target='_blank') _music_HitOK_UA
             i.fainfo.fab.fa-telegram
             
       .group
@@ -98,9 +98,9 @@ block content
             iframe(width='320', height='180', src='https://www.youtube.com/embed/videoseries?list=PLCbt8rNMaiwH0crotsDppzWMkODGmAl2n', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
 
           li
-            div.icon.web.telegram.org
+            div.icon.youtube
             a() Ще музика:  
-            a(href='https://t.me/music_hitok_ua', target='_blank') _music_HitOK_UA
+            a(href='https://www.youtube.com/@musik-hitok-ua', target='_blank') _music_HitOK_UA
             i.fainfo.fab.fa-telegram
         
       .group
@@ -161,7 +161,7 @@ block content
           li
             div.icon.web.telegram.org
             a() Ще музика:  
-            a(href='https://t.me/websis_music', target='_blank') _music_WebSIS_
+            a(href='https://www.youtube.com/@WebSIS_music', target='_blank') _music_WebSIS_
             i.fainfo.fab.fa-telegram
 
       .group
