--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -69,8 +69,8 @@ html(lang="ru")
                 .a2a_kit.a2a_kit_size_32.a2a_default_style(data-a2a-url='https://zakladki.github.io', data-a2a-title='Топ Закладки')
                   a.a2a_dd(href='https://www.addtoany.com/share')
                   a.a2a_button_facebook
-                  a.a2a_button_vk
-                  a.a2a_button_odnoklassniki
+                  // a.a2a_button_vk
+                  // a.a2a_button_odnoklassniki
                   a.a2a_button_telegram
                   a.a2a_button_viber
                   a.a2a_button_skype
