--- a/includes/index.pug
+++ b/includes/index.pug
@@ -170,7 +170,7 @@ block content
             span.opisi Кабін.Газ.2019
           li
             div.icon.gasolina-online.com
-            a(href='https://gasolina-online.com/', target='_blank') gasolina
+            a(href='https://gasolina-online.com/', target='_blank') Gasolina
             span.opisi Каб.Газ.(доставка)
           li
             div.icon.minfin.com.ua
